impl: fix: rotate button not visible

--- a/implementation/src/assets/editor.scss
+++ b/implementation/src/assets/editor.scss
@@ -301,6 +301,7 @@
         }
 
         > .rotate {
+            --selector-size: 4px;
             display: none;
             position: absolute;
             bottom: calc(-1 * 2 * 6 * var(--selector-size));
